add_executable(FillBoundary FillBoundary.cpp)
target_link_libraries(FillBoundary PRIVATE AsyncMPI)

add_executable(FillBoundary_old FillBoundary_old.cpp)
target_link_libraries(FillBoundary_old PRIVATE AsyncMPI)

add_executable(SolveEulerEquations SolverEulerEquations.cpp)
target_link_libraries(SolveEulerEquations PUBLIC AsyncMPI)